--- a/javascript/pureSite/style.css
+++ b/javascript/pureSite/style.css
@@ -1,18 +1,55 @@
 @import url("./reset.css");
+.brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: -100px;
+  width: 100%;
+  height: 140px;
+  border-top: 1px solid #ddd;
+  background: #fff;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease-in-out;
+  z-index: -1;
+}
+.brand ul {
+  display: flex;
+  gap: 4px;
+}
+.brand ul a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.brand ul a:hover {
+  text-decoration: underline;
+}
+
+.brand.active {
+  top: 100px;
+  z-index: 1;
+}
+
 header {
   width: 100%;
   padding: 0 4%;
   font-family: "Pretendard";
   font-weight: 500;
   height: 100px;
+  background: #fff;
+  position: relative;
+  z-index: 100;
 }
 header .header-wrap {
   display: flex;
   width: 84vw;
   height: 100%;
-  padding-left: 4.6vw;
+  padding-left: 7.2vw;
   align-items: center;
   justify-content: space-between;
+  background: #fff;
 }
 header .header-wrap .header-left {
   display: flex;
@@ -24,7 +61,7 @@ header .header-wrap .header-left ul {
   gap: 24px;
 }
 header .header-wrap .header-left ul li {
-  font-size: 18px;
+  font-size: 1.2rem;
   position: relative;
 }
 header .header-wrap .header-left ul li:last-child::before {
@@ -43,6 +80,7 @@ header .header-wrap .option-menu {
   width: 186px;
   height: 36px;
   position: relative;
+  font-size: 1rem;
   cursor: pointer;
 }
 header .header-wrap .option-menu::before {
@@ -77,6 +115,7 @@ header .header-wrap .option-menu ul {
   display: flex;
   flex-direction: column;
   transition: all 0.3s;
+  background: #fff;
 }
 header .header-wrap .option-menu ul.active {
   opacity: 1;
@@ -90,4 +129,58 @@ header .header-wrap .option-menu ul li {
 }
 header .header-wrap .option-menu ul li.active {
   display: block;
+}
+
+section {
+  height: 100%;
+  width: 100%;
+}
+section .main-sec {
+  height: 100%;
+  width: 100%;
+  margin-top: 20px;
+}
+section .main-sec .sec-wrap {
+  width: 100%;
+  height: auto;
+  min-height: 800px;
+  font-family: "UBuntu";
+  font-weight: 500;
+  position: relative;
+  gap: 72px;
+  font-size: 7.2vw;
+}
+section .main-sec .sec-wrap .better {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+section .main-sec .sec-wrap .middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+section .main-sec .sec-wrap .middle .changeImg {
+  border: 1px solid red;
+  width: 100%;
+  max-width: 480px;
+  height: 100%;
+}
+section .main-sec .sec-wrap .life {
+  width: 100%;
+  text-align: center;
+  font-size: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }/*# sourceMappingURL=style.css.map */
