--- a/profile/style.css
+++ b/profile/style.css
@@ -344,17 +344,26 @@ header .toggle-btn {
   justify-content: center;
   align-items: center;
 }
-.project .section-inner .modalScreen {
+.project .section-inner .modalback {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
   position: fixed;
-  top: 6%;
   bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.project .section-inner .modalScreen {
   width: 80%;
   height: 78%;
   margin: auto;
   background: #dddddd;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
-  z-index: 10;
   display: none;
   justify-content: center;
   align-items: center;
