--- a/240527/test/dragdrop/style.css
+++ b/240527/test/dragdrop/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #000;
+  background: gray;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -12,14 +12,14 @@ body {
   overflow: scroll;
 }
 .imageBox {
+  width: 100%;
   height: 500px;
   line-height: 500px;
-  overflow-x: scroll;
-  overflow-y: hidden;
   text-align: center;
+  border-bottom: 2px solid #fff;
 }
 .imageBox.on {
-  background: rgba(100, 100, 255, 0.2);
+  background: rgba(5, 100, 255, 0.2);
 }
 h1 {
   width: 100%;
