--- a/javascript/pureSite/style.css
+++ b/javascript/pureSite/style.css
@@ -1,4 +1,9 @@
 @import url("./reset.css");
+body {
+  height: 2000px;
+  overflow-x: hidden;
+}
+
 .brand {
   display: flex;
   justify-content: center;
@@ -19,12 +24,35 @@
   gap: 4px;
 }
 .brand ul a {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+.brand ul a::before {
+  content: "";
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  background: transparent;
 }
 .brand ul a:hover {
   text-decoration: underline;
+}
+.brand ul a:hover::before {
+  background: rgba(255, 255, 255, 0.2);
+}
+.brand ul a img {
+  width: 100%;
+}
+.brand ul a span {
+  font-family: "Pretendard";
+  font-weight: 500;
+  font-size: 0.8vw;
 }
 
 .brand.active {
@@ -80,8 +108,11 @@ header .header-wrap .option-menu {
   width: 186px;
   height: 36px;
   position: relative;
-  font-size: 1rem;
+  font-size: 0.8vw;
+}
+header .header-wrap .option-menu .option-menu-title {
   cursor: pointer;
+  width: 100%;
 }
 header .header-wrap .option-menu::before {
   content: "";
@@ -102,7 +133,9 @@ header .header-wrap .option-menu::after {
   background: url("./img/ico_family-arrow.svg") no-repeat;
 }
 header .header-wrap .option-menu ul {
-  display: block;
+  display: flex;
+  gap: 0;
+  flex-direction: column;
   position: absolute;
   top: 100%;
   left: 0;
@@ -113,22 +146,22 @@ header .header-wrap .option-menu ul {
   opacity: 0;
   padding: 16px;
   display: flex;
-  flex-direction: column;
-  transition: all 0.3s;
   background: #fff;
+  transition: all 0.3s;
 }
 header .header-wrap .option-menu ul.active {
   opacity: 1;
-  height: 260px;
+  height: auto;
   gap: 16px;
 }
 header .header-wrap .option-menu ul li {
-  display: none;
+  height: 0;
+  opacity: 0;
   font-weight: 400;
-  transition: all 0.3s;
 }
 header .header-wrap .option-menu ul li.active {
-  display: block;
+  height: auto;
+  opacity: 1;
 }
 
 section {
@@ -136,27 +169,30 @@ section {
   width: 100%;
 }
 section .main-sec {
-  height: 100%;
+  height: 88vh;
   width: 100%;
-  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 section .main-sec .sec-wrap {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: auto;
-  min-height: 800px;
   font-family: "UBuntu";
   font-weight: 500;
   position: relative;
-  gap: 72px;
   font-size: 7.2vw;
+  min-height: 42vw;
 }
 section .main-sec .sec-wrap .better {
   width: 100%;
   position: absolute;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   text-align: center;
+  transition: all 0.1s;
 }
 section .main-sec .sec-wrap .middle {
   position: absolute;
@@ -170,16 +206,67 @@ section .main-sec .sec-wrap .middle {
   gap: 60px;
 }
 section .main-sec .sec-wrap .middle .changeImg {
-  width: 100%;
+  width: 28vw;
   max-width: 480px;
   height: 100%;
 }
 section .main-sec .sec-wrap .life {
   width: 100%;
   text-align: center;
-  font-size: 100%;
   position: absolute;
   bottom: 0;
+  left: 0;
+  text-align: center;
+}
+section .main-sec .sec-wrap .life .letter {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+section .sec-bottom {
+  width: 92vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: absolute;
+  bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
+  font-family: "Pretendard";
+  font-size: 1vw;
+  font-weight: 500;
+}
+section .sec-bottom a {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+section .sec-bottom a::before {
+  content: "";
+  position: absolute;
+  right: -50px;
+  top: 0px;
+  background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain no-repeat;
+  width: 30%;
+  height: 30%;
+}
+section .sec-bottom a::after {
+  content: "";
+  position: absolute;
+  right: -56px;
+  top: 8px;
+  background: url("./img/ico_event_go.png") center/contain no-repeat;
+  width: 10%;
+  height: 10%;
+}
+section .sec-bottom a img {
+  width: 100%;
+  max-width: 240px;
+  margin-top: 16px;
+}
+section .sec-bottom .eat {
+  font-family: "UBuntu";
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
