--- a/javascript/pureSite/style.scss
+++ b/javascript/pureSite/style.scss
@@ -1,4 +1,8 @@
 @import url("./reset.css");
+body {
+  height: 2000px;
+  overflow-x: hidden;
+}
 
 .brand {
   display: flex;
@@ -14,15 +18,39 @@
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease-in-out;
   z-index: -1;
+
   ul {
     display: flex;
     gap: 4px;
     a {
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: relative;
+      &::before {
+        content: "";
+        width: 100%;
+        height: 80%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 100;
+        background: transparent;
+      }
       &:hover {
         text-decoration: underline;
+        &::before {
+          background: rgba(255, 255, 255, 0.2);
+        }
+      }
+      img {
+        width: 100%;
+      }
+      span {
+        font-family: "Pretendard";
+        font-weight: 500;
+        font-size: 0.8vw;
       }
     }
   }
@@ -80,9 +108,11 @@ header {
       width: 186px;
       height: 36px;
       position: relative;
-      font-size: 1rem;
-
-      cursor: pointer;
+      font-size: 0.8vw;
+      .option-menu-title {
+        cursor: pointer;
+        width: 100%;
+      }
       &::before {
         content: "";
         position: absolute;
@@ -102,7 +132,9 @@ header {
         background: url("./img/ico_family-arrow.svg") no-repeat;
       }
       ul {
-        display: block;
+        display: flex;
+        gap: 0;
+        flex-direction: column;
         position: absolute;
         top: 100%;
         left: 0;
@@ -113,22 +145,21 @@ header {
         opacity: 0;
         padding: 16px;
         display: flex;
-        flex-direction: column;
-        transition: all 0.3s;
         background: #fff;
+        transition: all 0.3s;
 
         &.active {
           opacity: 1;
-          height: 260px;
+          height: auto;
           gap: 16px;
         }
         li {
-          display: none;
-
+          height: 0;
+          opacity: 0;
           font-weight: 400;
-          transition: all 0.3s;
           &.active {
-            display: block;
+            height: auto;
+            opacity: 1;
           }
         }
       }
@@ -139,25 +170,29 @@ section {
   height: 100%;
   width: 100%;
   .main-sec {
-    height: 100%;
+    height: 88vh;
     width: 100%;
-    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    position: relative;
+
     .sec-wrap {
+      display: flex;
+      flex-direction: column;
       width: 100%;
       height: auto;
-      min-height: 800px;
       font-family: "UBuntu";
       font-weight: 500;
       position: relative;
-      gap: 72px;
       font-size: 7.2vw;
+      min-height: 42vw;
       .better {
         width: 100%;
         position: absolute;
         top: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        left: 0;
         text-align: center;
+        transition: all 0.1s;
       }
       .middle {
         position: absolute;
@@ -170,7 +205,7 @@ section {
         justify-content: center;
         gap: 60px;
         .changeImg {
-          width: 100%;
+          width: 28vw;
           max-width: 480px;
           height: 100%;
         }
@@ -178,12 +213,64 @@ section {
       .life {
         width: 100%;
         text-align: center;
-        font-size: 100%;
         position: absolute;
         bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        left: 0;
+        text-align: center;
+        .letter {
+          width: 100%;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+        }
       }
+    }
+  }
+  .sec-bottom {
+    width: 92vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Pretendard";
+    font-size: 1vw;
+    font-weight: 500;
+    a {
+      width: auto;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        right: -50px;
+        top: 0px;
+        background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain
+          no-repeat;
+        width: 30%;
+        height: 30%;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        right: -56px;
+        top: 8px;
+        background: url("./img/ico_event_go.png") center/contain no-repeat;
+        width: 10%;
+        height: 10%;
+      }
+      img {
+        width: 100%;
+        max-width: 240px;
+        margin-top: 16px;
+      }
+    }
+    .eat {
+      font-family: "UBuntu";
+      cursor: pointer;
     }
   }
 }
