--- a/javascript/pureSite/style.scss
+++ b/javascript/pureSite/style.scss
@@ -10,7 +10,7 @@ body {
   align-items: center;
   position: absolute;
   left: 0;
-  top: -100px;
+  top: -150px;
   width: 100%;
   height: 140px;
   border-top: 1px solid #ddd;
@@ -61,15 +61,17 @@ body {
 }
 
 header {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   padding: 0 4%;
   font-family: "Pretendard";
   font-weight: 500;
   height: 100px;
   background: #fff;
-  position: relative;
   z-index: 100;
-
+  transition: top 0.3s ease-in-out;
   .header-wrap {
     display: flex;
     width: 84vw;
@@ -78,6 +80,7 @@ header {
     align-items: center;
     justify-content: space-between;
     background: #fff;
+    position: relative;
     .header-left {
       display: flex;
       align-items: center;
@@ -108,7 +111,7 @@ header {
       width: 186px;
       height: 36px;
       position: relative;
-      font-size: 0.8vw;
+      font-size: 15px;
       .option-menu-title {
         cursor: pointer;
         width: 100%;
@@ -169,13 +172,17 @@ header {
 section {
   height: 100%;
   width: 100%;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 100px;
   .main-sec {
-    height: 88vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     position: relative;
-
     .sec-wrap {
       display: flex;
       flex-direction: column;
@@ -200,6 +207,7 @@ section {
         left: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
+        height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -207,7 +215,7 @@ section {
         .changeImg {
           width: 28vw;
           max-width: 480px;
-          height: 100%;
+          height: auto;
         }
       }
       .life {
@@ -225,52 +233,198 @@ section {
         }
       }
     }
-  }
-  .sec-bottom {
-    width: 92vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-family: "Pretendard";
-    font-size: 1vw;
-    font-weight: 500;
-    a {
-      width: auto;
+    .sec-bottom {
+      width: 92vw;
       display: flex;
-      flex-direction: column;
-      position: relative;
-      &::before {
-        content: "";
-        position: absolute;
-        right: -50px;
-        top: 0px;
-        background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain
-          no-repeat;
-        width: 30%;
-        height: 30%;
+      justify-content: space-between;
+      align-items: flex-end;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: "Pretendard";
+      font-size: 1vw;
+      font-weight: 500;
+      a {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          right: -50px;
+          top: 0px;
+          background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain
+            no-repeat;
+          width: 30%;
+          height: 30%;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          right: -56px;
+          top: 8px;
+          background: url("./img/ico_event_go.png") center/contain no-repeat;
+          width: 10%;
+          height: 10%;
+        }
+        span {
+          width: 100%;
+          height: auto;
+
+          &::after {
+            content: "";
+            position: absolute;
+            left: 90px;
+            bottom: 46px;
+            background: url("./img/ico_video_play.svg") center/contain no-repeat;
+            width: 24%;
+            height: 24%;
+            z-index: 50;
+          }
+        }
+        img {
+          width: 100%;
+          max-width: 240px;
+          margin-top: 16px;
+          position: relative;
+        }
       }
-      &::after {
-        content: "";
-        position: absolute;
-        right: -56px;
-        top: 8px;
-        background: url("./img/ico_event_go.png") center/contain no-repeat;
-        width: 10%;
-        height: 10%;
-      }
-      img {
-        width: 100%;
-        max-width: 240px;
-        margin-top: 16px;
+      .eat {
+        font-family: "UBuntu";
+        cursor: pointer;
       }
     }
-    .eat {
-      font-family: "UBuntu";
-      cursor: pointer;
+  }
+  .middle-sec {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    ul {
+      width: 92vw;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      align-items: center;
+      li {
+        width: 100%;
+        height: 17vw;
+        overflow: hidden;
+        position: relative;
+        &::before {
+          content: "";
+          background: url("./img/chungjungone-logo1.png") center/contain
+            no-repeat;
+          position: absolute;
+          left: 38px;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 10%;
+          height: 3.6vw;
+          z-index: 10;
+        }
+        &:nth-child(2)::before {
+          background: url("./img/chungjungone-logo2.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(3)::before {
+          background: url("./img/chungjungone-logo3.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(4)::before {
+          background: url("./img/chungjungone-logo4.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(5)::before {
+          background: url("./img/chungjungone-logo5.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(6)::before {
+          background: url("./img/chungjungone-logo6.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(7)::before {
+          background: url("./img/chungjungone-logo7.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(8)::before {
+          background: url("./img/chungjungone-logo8.png") center/contain
+            no-repeat;
+        }
+        &:nth-child(2) a {
+          background: url("./img/chungjungone-bg2-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(3) a {
+          background: url("./img/chungjungone-bg3-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(4) a {
+          background: url("./img/chungjungone-bg4-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(5) a {
+          background: url("./img/chungjungone-bg5-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(6) a {
+          background: url("./img/chungjungone-bg6-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(7) a {
+          background: url("./img/chungjungone-bg7-min.png") center/cover
+            no-repeat;
+        }
+        &:nth-child(8) a {
+          background: url("./img/chungjungone-bg8-min.png") center/cover
+            no-repeat;
+        }
+        a {
+          // transform: scale(1.2);
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 0 50px;
+          background: url("./img/chungjungone_bg_1-min.png") center/cover
+            no-repeat;
+          &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3);
+          }
+
+          .middle-title {
+            position: absolute;
+            //오른쪽에서 튀어나오게 조작
+            width: 100%;
+            left: 100%;
+            opacity: 1;
+            top: 38%;
+            transform: translateY(-50%);
+            font-family: "Pretendard";
+            font-size: 2.6vw;
+            color: #fff;
+            transition: all 1s;
+            &::before {
+              content: "";
+              background: url("./img/ico_more.svg") center/cover no-repeat;
+              position: absolute;
+              left: 0;
+              bottom: -60%;
+              width: 2.4vw;
+              height: 2.4vw;
+            }
+          }
+        }
+      }
     }
   }
 }
