--- a/javascript/pureSite/style.css
+++ b/javascript/pureSite/style.css
@@ -4,33 +4,45 @@ body {
   overflow-x: hidden;
 }
 
-.brand {
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  font-family: "Pretendard";
+  font-weight: 500;
+  height: 5.2vw;
+  background: #fff;
+  z-index: 100;
+  transition: top 0.3s ease-in-out;
+}
+header .brand {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
   left: 0;
-  top: -150px;
+  top: -12vw;
   width: 100%;
-  height: 140px;
+  height: 8vw;
   border-top: 1px solid #ddd;
   background: #fff;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease-in-out;
-  z-index: -1;
+  z-index: -5;
 }
-.brand ul {
+header .brand ul {
   display: flex;
-  gap: 4px;
+  gap: 0.2vw;
 }
-.brand ul a {
-  width: 100%;
+header .brand ul a {
+  width: 8.4vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
 }
-.brand ul a::before {
+header .brand ul a::before {
   content: "";
   width: 100%;
   height: 80%;
@@ -40,79 +52,73 @@ body {
   z-index: 100;
   background: transparent;
 }
-.brand ul a:hover {
+header .brand ul a:hover {
   text-decoration: underline;
 }
-.brand ul a:hover::before {
+header .brand ul a:hover::before {
   background: rgba(255, 255, 255, 0.2);
 }
-.brand ul a img {
+header .brand ul a img {
   width: 100%;
+  height: auto;
 }
-.brand ul a span {
+header .brand ul a span {
   font-family: "Pretendard";
   font-weight: 500;
   font-size: 0.8vw;
 }
-
-.brand.active {
-  top: 100px;
+header .brand.active {
+  top: 5.2vw;
   z-index: 1;
-}
-
-header {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  padding: 0 4%;
-  font-family: "Pretendard";
-  font-weight: 500;
-  height: 100px;
-  background: #fff;
-  z-index: 100;
-  transition: top 0.3s ease-in-out;
 }
 header .header-wrap {
   display: flex;
-  width: 84vw;
+  width: 100vw;
   height: 100%;
-  padding-left: 7.2vw;
+  padding: 0 12vw;
   align-items: center;
   justify-content: space-between;
   background: #fff;
   position: relative;
+  z-index: 100;
 }
 header .header-wrap .header-left {
   display: flex;
   align-items: center;
-  gap: 64px;
+  gap: 3.4vw;
+}
+header .header-wrap .header-left .title {
+  width: 5.8vw;
+}
+header .header-wrap .header-left .title img {
+  width: 100%;
+  height: auto;
 }
 header .header-wrap .header-left ul {
   display: flex;
-  gap: 24px;
+  gap: 1.4vw;
 }
 header .header-wrap .header-left ul li {
-  font-size: 1.2rem;
+  font-size: 1vw;
   position: relative;
 }
 header .header-wrap .header-left ul li:last-child::before {
   content: "";
   position: absolute;
-  right: -26px;
+  right: -1.3vw;
   bottom: 3px;
-  width: 16px;
-  height: 16px;
+  width: 0.8vw;
+  height: 0.8vw;
   background: url("./img/ico_new_window.svg") center/contain no-repeat;
   cursor: pointer;
 }
 header .header-wrap .option-menu {
   display: flex;
   align-items: center;
-  width: 186px;
-  height: 36px;
+  width: 9.6vw;
+  height: 2vw;
   position: relative;
-  font-size: 15px;
+  font-size: 0.8vw;
 }
 header .header-wrap .option-menu .option-menu-title {
   cursor: pointer;
@@ -121,20 +127,20 @@ header .header-wrap .option-menu .option-menu-title {
 header .header-wrap .option-menu::before {
   content: "";
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 4px;
+  height: 0.2vw;
   background: url("./img/bg_underline.png") center/cover no-repeat;
 }
 header .header-wrap .option-menu::after {
   content: "";
   position: absolute;
-  top: 12px;
+  top: 0.8vw;
   right: 0;
-  width: 12px;
-  height: 12px;
-  background: url("./img/ico_family-arrow.svg") no-repeat;
+  width: 0.4vw;
+  height: 0.4vw;
+  background: url("./img/ico_family-arrow.svg") center/contain no-repeat;
 }
 header .header-wrap .option-menu ul {
   display: flex;
@@ -169,9 +175,9 @@ header .header-wrap .option-menu ul li.active {
 }
 
 section {
-  height: 100%;
+  height: auto;
   width: 100%;
-  margin-top: 100px;
+  margin: 1.8vw 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -209,7 +215,7 @@ section .main-sec .sec-wrap .middle {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  height: 100vh;
+  min-height: 780px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -240,7 +246,7 @@ section .main-sec .sec-bottom {
   justify-content: space-between;
   align-items: flex-end;
   position: absolute;
-  bottom: 10px;
+  bottom: 4.4vw;
   left: 50%;
   transform: translateX(-50%);
   font-family: "Pretendard";
@@ -346,6 +352,9 @@ section .middle-sec ul li:nth-child(7)::before {
 section .middle-sec ul li:nth-child(8)::before {
   background: url("./img/chungjungone-logo8.png") center/contain no-repeat;
 }
+section .middle-sec ul li:nth-child(9)::before {
+  background: url("./img/chungjungone-logo9.png") center/contain no-repeat;
+}
 section .middle-sec ul li:nth-child(2) a {
   background: url("./img/chungjungone-bg2-min.png") center/cover no-repeat;
 }
@@ -367,9 +376,10 @@ section .middle-sec ul li:nth-child(7) a {
 section .middle-sec ul li:nth-child(8) a {
   background: url("./img/chungjungone-bg8-min.png") center/cover no-repeat;
 }
+section .middle-sec ul li:nth-child(9) a {
+  background: url("./img/chungjungone-bg9.png") center/cover no-repeat;
+}
 section .middle-sec ul li a {
-  animation: zoom 1s ease-in-out;
-  animation-fill-mode: both;
   width: 100%;
   height: 100%;
   display: flex;
@@ -378,6 +388,10 @@ section .middle-sec ul li a {
   padding: 0 50px;
   background: url("./img/chungjungone_bg_1-min.png") center/cover no-repeat;
   transform: scale(1.2);
+}
+section .middle-sec ul li a.active {
+  animation: zoom 1s ease-in-out;
+  animation-fill-mode: both;
 }
 section .middle-sec ul li a::before {
   content: "";
@@ -390,7 +404,7 @@ section .middle-sec ul li a::before {
 }
 @keyframes zoom {
   0% {
-    transform: scale(1.1);
+    transform: scale(1.2);
   }
   100% {
     transform: scale(1);
@@ -401,12 +415,12 @@ section .middle-sec ul li a .middle-title {
   width: 100%;
   left: 100%;
   opacity: 1;
-  top: 38%;
+  top: 7.4vw;
   transform: translateY(-50%);
   font-family: "Pretendard";
   font-size: 2.2vw;
   color: #fff;
-  transition: all 1s ease-in-out;
+  transition: all 1.2s ease-in-out;
 }
 section .middle-sec ul li a .middle-title::before {
   content: "";
@@ -416,4 +430,100 @@ section .middle-sec ul li a .middle-title::before {
   bottom: -60%;
   width: 2.4vw;
   height: 2.4vw;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2vw 0 6vw;
+  font-size: 0.9vw;
+  font-family: "Pretendard";
+}
+footer .personal {
+  display: flex;
+  gap: 18px;
+  height: 4vw;
+  justify-content: center;
+  padding-right: 5vw;
+}
+footer .personal span:first-child {
+  font-weight: 600;
+  position: relative;
+  display: inline-block;
+  width: 8vw;
+  text-align: left;
+  cursor: pointer;
+}
+footer .personal span:first-child::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 2px;
+  width: 1vw;
+  height: 1vw;
+  margin-left: 4px;
+  background: url("./img/ico_new_window.svg") center/contain no-repeat;
+}
+footer .personal span:last-child {
+  position: relative;
+  cursor: pointer;
+}
+footer .personal span:last-child::before {
+  content: "";
+  position: absolute;
+  right: -3vw;
+  top: -0.6vw;
+  width: 2vw;
+  height: 2vw;
+  margin-left: 4px;
+  background: url("./img/ccm.png") center/contain no-repeat;
+}
+footer .logo-bottom {
+  width: 6vw;
+  margin-bottom: 1.2vw;
+}
+footer .logo-bottom img {
+  width: 100%;
+  height: auto;
+}
+footer .desc-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-size: 0.9vw;
+}
+footer .desc-bottom .bar {
+  position: relative;
+  padding-right: 10px;
+  margin-right: 8px;
+  width: 2vw;
+}
+footer .desc-bottom .bar::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid black;
+}
+footer .social {
+  display: flex;
+  width: 8vw;
+  gap: 0.6vw;
+  justify-content: space-between;
+  margin: 1.2vw auto;
+}
+footer .social img {
+  width: 100%;
+  height: auto;
+}
+footer .copyright {
+  font-size: 0.8vw;
+}
+footer .copyright span {
+  font-weight: 300;
+  margin: 0 4px;
 }/*# sourceMappingURL=style.css.map */
