--- a/profile/style.scss
+++ b/profile/style.scss
@@ -75,6 +75,9 @@ header {
   }
 }
 .color-setting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
   height: 50px;
   background: map-get($font-color, primary);
@@ -85,7 +88,15 @@ header {
   i {
     font-size: 24px;
     color: #fff;
-    line-height: 50px;
+    animation: spin 2s linear infinite;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
 .content {
@@ -508,58 +519,109 @@ header {
 }
 // example
 .example {
+  border: 1px solid red;
+  padding-bottom: 60px;
+  height: auto;
   .section-inner {
-    margin-top: 60px;
-    width: 78%;
-    border: 1px solid red;
-    .ex-menu {
-      display: flex;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+
+    .inner-wrap {
+      width: 78%;
+      height: 100vw;
       height: auto;
-      justify-content: flex-start;
-      align-items: flex-start;
-      margin: 0 auto;
-      li {
-        text-align: center;
-        height: 42px;
-        width: 140px;
-        line-height: 32px;
-        padding: 5px 10px;
-        background: map-get($font-color, primary);
-        border-radius: 24px;
-        color: #fff;
-        cursor: pointer;
+      background: map-get($font-color, primary-light);
+      .ex-menu {
+        display: flex;
+        height: auto;
+        justify-content: flex-start;
+        align-items: flex-start;
         position: relative;
-        span {
-          position: absolute;
-          top: 0;
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-          line-height: 42px;
-          border-radius: 20px;
-          background: map-get($font-color, primary-dark);
-          opacity: 1;
-          &.active {
-            opacity: 0;
+
+        li {
+          text-align: center;
+          height: 42px;
+          width: 140px;
+          line-height: 32px;
+          padding: 5px 10px;
+          background: map-get($font-color, primary);
+          border-radius: 24px;
+          color: #fff;
+          cursor: pointer;
+          position: relative;
+
+          span {
+            position: absolute;
+            top: 0;
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            line-height: 42px;
+            border-radius: 20px;
+            background: map-get($font-color, primary-dark);
+            opacity: 1;
+            &.active {
+              opacity: 0;
+            }
           }
         }
       }
-    }
-    .ex-box {
-      border: 1px solid black;
-      width: 100%;
-      height: 100%;
-      margin-top: 24px;
-      background: map-get($font-color, primary-light);
-      .ex-box-wrap {
+
+      .ex-box {
         width: 100%;
-        height: 100%;
-        gap: 5%;
-        li {
-          width: 28%;
-          height: 84%;
-          border: 1px solid red;
-          margin: 20px;
+        height: auto;
+        margin-top: 24px;
+        position: relative;
+        background: map-get($font-color, primary-light);
+        .ex-box-wrap {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          display: none;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          &.active {
+            display: flex;
+          }
+          li {
+            flex-grow: 1;
+            height: auto;
+            min-height: 420px;
+            min-width: 380px;
+            margin: 20px;
+            overflow: hidden;
+            position: relative;
+            cursor: pointer;
+            z-index: 10;
+
+            div {
+              position: absolute;
+              left: 0;
+              top: -100%;
+              width: 100%;
+              height: 100%;
+              background: map-get($font-color, primary-dark);
+              opacity: 0;
+              transition: all 0.3s ease;
+            }
+            &:hover div {
+              top: 0;
+              opacity: 1;
+            }
+
+            img {
+              width: 100%;
+              object-fit: cover;
+              height: 100%;
+              position: absolute;
+              left: 0;
+              top: 0;
+              z-index: -1;
+            }
+          }
         }
       }
     }
