--- a/javascript/calendar/style.css
+++ b/javascript/calendar/style.css
@@ -2,11 +2,61 @@
 
 body {
   display: flex;
-  align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #9b59b6;
+  background: url("https://images.unsplash.com/photo-1616001089004-04948fc0e6c1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+    center/cover no-repeat;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.title {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.title h1 {
+  color: #fff;
+}
+.title > i {
+  font-size: 24px;
+  color: #f8abb8;
+}
+.birthday {
+  margin-bottom: 20px;
+}
+.birthday input {
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  padding-left: 8px;
+}
+.birthday input:focus {
+  outline: none;
+}
+.birthday input::placeholder {
+  color: #9b59b6;
+}
+button {
+  height: 40px;
+  width: 80px;
+  border: 2px solid #9b59b6;
+  background: #9b59b6;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+button:hover {
+  background: #fff;
+  border: 2px solid #9b59b6;
+  color: #9b59b6;
+}
+
 .wrapper {
   width: 450px;
   height: 468px;
@@ -100,9 +150,58 @@ body {
 .days li.active::before {
   background: #9b59b6;
 }
+.days li.active:hover::before {
+  background: #9b59b6;
+}
 .days li:hover::before {
   background: #f7f7f7;
 }
 .lastmonth-day {
   color: #aaa;
+}
+.countdown {
+  display: flex;
+  gap: 16px;
+  margin-top: 20px;
+  font-size: 38px;
+}
+.countdown div {
+  color: #fff;
+}
+
+.countdown div::after {
+  content: ":";
+  margin-left: 24px;
+}
+.countdown div:last-child::after {
+  display: none;
+}
+.countdown span {
+  margin: 0 8px;
+  color: #f8abb8;
+  font-weight: 600;
+}
+.congratulation {
+  opacity: 0;
+  font-size: 46px;
+  color: #fff;
+  font-style: italic;
+  transition: all 0.3s;
+
+  i {
+    color: #f8abb8;
+  }
+}
+.congratulation.active {
+  animation: happy 1s linear both;
+}
+@keyframes happy {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
 }
