--- a/javascript/filter/public/style.css
+++ b/javascript/filter/public/style.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Noto Sans KR";
-  background: rgba(125, 25, 25, 0.9);
+  background: #7d1919;
 }
 header,
 .modalItem {
