--- a/profile/style.css
+++ b/profile/style.css
@@ -108,7 +108,7 @@ header .toggle-btn {
   justify-content: center;
   align-items: center;
   background: #3f51b5;
-  box-shadow: inset 5px -5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 5px -5px 15px rgba(0, 0, 0, 0.2);
   opacity: 0.9;
   color: #fff;
   font-size: 24px;
@@ -209,7 +209,7 @@ header .toggle-btn {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 16px;
 }
 .section-inner ul li {
   display: flex;
@@ -237,16 +237,20 @@ header .toggle-btn {
 }
 
 .home {
-  max-width: 1000px;
+  max-width: 60%;
   margin-bottom: 20px;
 }
 .home .container {
+  width: 100%;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 60px;
 }
 .home .container .title {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .home .container .title span {
   font-size: 64px;
@@ -263,14 +267,25 @@ header .toggle-btn {
 .home .container .title p {
   width: 280px;
   line-height: 1.2;
-  text-align: right;
+  text-align: center;
   font-size: 20px;
   font-weight: 500;
+  letter-spacing: 1px;
+}
+.home .container .title .description {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 400px;
+  text-align: left;
+  letter-spacing: 1px;
 }
 .home .container .img {
-  background: url("https://file2.nocutnews.co.kr/newsroom/image/2023/05/25/202305250649476532_0.jpg") center/cover no-repeat;
-  width: 500px;
-  height: 550px;
+  background: url("./img/yiseul01.jpg") top/cover no-repeat;
+  width: 540px;
+  height: 740px;
 }
 
 .about {
@@ -292,6 +307,15 @@ header .toggle-btn {
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
   animation: aniClick 0.8s alternate-reverse infinite;
+}
+.skill .section-tit .ani-dew::after {
+  content: "Click";
+  position: absolute;
+  font-size: 18px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  color: #fff;
 }
 .skill .section-tit .ani-dew.active {
   animation: aniDew 3s linear;
@@ -316,24 +340,26 @@ header .toggle-btn {
     opacity: 0;
   }
 }
-.skill .section-inner .skill-content {
+.skill .section-inner ul li .skill-content {
   margin-right: 20px;
 }
-.skill .section-inner .skill-content .skill-box {
+.skill .section-inner ul li .skill-content .skill-box {
   width: 400px;
   height: 60px;
   margin-bottom: 42px;
   padding: 4px 0;
   background: #3f51b5;
   display: flex;
+  align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 16px;
 }
-.skill .section-inner .skill-content .skill-box h2 {
+.skill .section-inner ul li .skill-content .skill-box h2 {
   line-height: 60px;
   color: #fff;
+  font-size: 18px;
 }
-.skill .section-inner .skill-content .skill-desc {
+.skill .section-inner ul li .skill-content .skill-desc {
   visibility: hidden;
   opacity: 0;
   display: flex;
@@ -347,12 +373,12 @@ header .toggle-btn {
   position: relative;
   transition: all 1s;
 }
-.skill .section-inner .skill-content .skill-desc.active {
+.skill .section-inner ul li .skill-content .skill-desc.active {
   visibility: visible;
   opacity: 1;
   height: 150px;
 }
-.skill .section-inner .skill-content .skill-desc::before {
+.skill .section-inner ul li .skill-content .skill-desc::before {
   content: "";
   width: 40px;
   height: 40px;
@@ -363,10 +389,25 @@ header .toggle-btn {
   top: -15px;
   z-index: -1;
 }
-.skill .section-inner .skill-content .skill-desc p {
+.skill .section-inner ul li .skill-content .skill-desc p {
+  display: flex;
+  align-items: center;
   font-family: "GmarketSansMedium";
   line-height: 1.5;
   font-size: 18px;
+}
+.skill .section-inner ul li img {
+  width: 46px;
+  height: 46px;
+}
+.skill .section-inner ul li:nth-child(3) .jquery {
+  background: #fff;
+  width: 36px;
+  height: 36px;
+}
+.skill .section-inner ul li:last-child img {
+  width: 38px;
+  height: 38px;
 }
 
 .project .section-inner {
@@ -390,7 +431,7 @@ header .toggle-btn {
   align-items: center;
   z-index: 100;
 }
-.project .section-inner .modalScreen {
+.project .section-inner .modalback .modalScreen {
   width: 80%;
   height: 78%;
   margin: auto;
@@ -400,7 +441,7 @@ header .toggle-btn {
   justify-content: center;
   align-items: center;
 }
-.project .section-inner .modalScreen .modalScreenInner {
+.project .section-inner .modalback .modalScreen .modalScreenInner {
   width: 94%;
   border-width: 4px;
   border-style: solid;
@@ -413,56 +454,66 @@ header .toggle-btn {
   overflow: hidden;
   position: relative;
 }
-.project .section-inner .modalScreen .modalScreenInner .cloneWeb {
+.project .section-inner .modalback .modalScreen .modalScreenInner .cloneWeb {
   width: 58%;
   height: 100%;
   overflow: hidden;
 }
-.project .section-inner .modalScreen .modalScreenInner .cloneWeb img {
+.project .section-inner .modalback .modalScreen .modalScreenInner .cloneWeb img {
   display: inline-block;
   width: 100%;
   height: 100%;
+  padding-right: 4px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: top;
      object-position: top;
   transition: all 5s ease-in-out;
 }
-.project .section-inner .modalScreen .modalScreenInner .cloneWeb img:hover {
+.project .section-inner .modalback .modalScreen .modalScreenInner .cloneWeb img:hover {
   -o-object-position: bottom;
      object-position: bottom;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 42%;
   height: 100%;
   background: #fff;
   padding: 20px 0 0 20px;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text ul {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text ul {
   width: 90%;
-  height: 88%;
+  height: 100%;
   display: flex;
-  flex-wrap: nowrap;
+  gap: 52px;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  padding: 0 20px 50px;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text .clone-desc li {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li {
   display: flex;
   align-items: flex-start;
+  padding: 0;
   gap: 8px;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text .clone-desc li .tit {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit {
   font-size: 22px;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text .clone-desc li .tit i {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit i {
   margin-right: 12px;
   color: #3f51b5;
 }
-.project .section-inner .modalScreen .modalScreenInner .project-text .clone-desc li p {
-  margin-left: 20px;
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li .tit p {
+  display: inline-block;
+  font-size: 14px;
 }
-.project .section-inner .modalScreen .modalScreenInner .modalCloseBtn {
+.project .section-inner .modalback .modalScreen .modalScreenInner .project-text .clone-desc li p {
+  margin-left: 30px;
+}
+.project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn {
   position: absolute;
   display: inline-block;
   right: 20px;
@@ -470,13 +521,13 @@ header .toggle-btn {
   text-align: center;
   cursor: pointer;
 }
-.project .section-inner .modalScreen .modalScreenInner .modalCloseBtn i {
+.project .section-inner .modalback .modalScreen .modalScreenInner .modalCloseBtn i {
   font-family: "FontAwesome";
   content: "\f00d";
   font-size: 48px;
   color: #3f51b5;
 }
-.project .section-inner .modalScreen .modalScreenInner .viewMore {
+.project .section-inner .modalback .modalScreen .modalScreenInner .viewMore {
   display: inline-block;
   position: absolute;
   right: 20px;
@@ -630,24 +681,24 @@ header .toggle-btn {
   align-items: center;
 }
 .example .section-inner .inner-wrap .ex-box .modal-full #my-modal #chat-iframe {
-  width: 80%;
-  height: 78%;
+  width: 100%;
+  height: 100%;
   border: none;
   border-radius: 5px;
   position: relative;
 }
 .example .section-inner .inner-wrap .ex-box .modal-full #my-modal .modal-close-btn {
-  width: 58px;
+  width: 32px;
   height: 32px;
-  border-radius: 25px;
   text-align: center;
-  line-height: 32px;
   position: absolute;
-  right: 10%;
-  bottom: 7%;
-  background: #3f51b5;
-  color: #fff;
+  right: 10px;
+  top: 20px;
   cursor: pointer;
+}
+.example .section-inner .inner-wrap .ex-box .modal-full #my-modal .modal-close-btn i {
+  color: #3f51b5;
+  font-size: 18px;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap {
   padding: 20px;
@@ -684,13 +735,24 @@ header .toggle-btn {
   transition: all 0.3s ease;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap li:hover div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
-  opacity: 0.8;
+  opacity: 0.9;
+  text-align: left;
+  padding: 0 50px;
+}
+.example .section-inner .inner-wrap .ex-box .ex-box-wrap li:hover div p {
+  width: 340px;
+  color: #fff;
 }
 .example .section-inner .inner-wrap .ex-box .ex-box-wrap li img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
   height: 100%;
   position: absolute;
   left: 0;
@@ -755,7 +817,7 @@ header .toggle-btn {
 }
 .contact .container .section-inner .social a img,
 .contact .container .section-inner .social span img {
-  width: 88%;
+  width: 80%;
   padding: 5px;
 }
 .contact .container .bottom {
