--- a/profile/style.scss
+++ b/profile/style.scss
@@ -86,7 +86,7 @@ header {
   justify-content: center;
   align-items: center;
   background: map-get($font-color, primary);
-  box-shadow: inset 5px -5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 5px -5px 15px rgba(0, 0, 0, 0.2);
   opacity: 0.9;
   color: #fff;
   font-size: 24px;
@@ -180,7 +180,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 16px;
     li {
       display: flex;
       flex-direction: column;
@@ -209,14 +209,19 @@ header {
 }
 // home
 .home {
-  max-width: 1000px;
+  max-width: 60%;
   margin-bottom: 20px;
   .container {
+    width: 100%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 60px;
     .title {
       display: flex;
       flex-direction: column;
+      align-items: center;
+
       span {
         font-size: 64px;
         font-family: map-get($font-family, main_en);
@@ -232,16 +237,26 @@ header {
       p {
         width: 280px;
         line-height: 1.2;
-        text-align: right;
+        text-align: center;
         font-size: 20px;
         font-weight: 500;
+        letter-spacing: 1px;
+      }
+      .description {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 400px;
+        text-align: left;
+        letter-spacing: 1px;
       }
     }
     .img {
-      background: url("https://file2.nocutnews.co.kr/newsroom/image/2023/05/25/202305250649476532_0.jpg")
-        center/cover no-repeat;
-      width: 500px;
-      height: 550px;
+      background: url("./img/yiseul01.jpg") top/cover no-repeat;
+      width: 540px;
+      height: 740px;
     }
   }
 }
@@ -265,6 +280,15 @@ header {
       left: 50%;
       transform: translateX(-50%) rotate(45deg);
       animation: aniClick 0.8s alternate-reverse infinite;
+      &::after {
+        content: "Click";
+        position: absolute;
+        font-size: 18px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-45deg);
+        color: #fff;
+      }
     }
     .ani-dew.active {
       animation: aniDew 3s linear;
@@ -291,55 +315,82 @@ header {
     }
   }
   .section-inner {
-    .skill-content {
-      margin-right: 20px;
-      .skill-box {
-        width: 400px;
-        height: 60px;
-        margin-bottom: 42px;
-        padding: 4px 0;
-        background: map-get($font-color, primary);
-        display: flex;
-        justify-content: center;
-        gap: 8px;
-        h2 {
-          line-height: 60px;
-          color: #fff;
+    ul {
+      li {
+        .skill-content {
+          margin-right: 20px;
+          .skill-box {
+            width: 400px;
+            height: 60px;
+            margin-bottom: 42px;
+            padding: 4px 0;
+            background: map-get($font-color, primary);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            gap: 16px;
+            h2 {
+              line-height: 60px;
+              color: #fff;
+              font-size: 18px;
+            }
+          }
+
+          .skill-desc {
+            visibility: hidden;
+            opacity: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 400px;
+            height: 0;
+            padding: 20px;
+            background: map-get($font-color, primary-light);
+            margin-top: 28px;
+            position: relative;
+            transition: all 1s;
+            &.active {
+              visibility: visible;
+              opacity: 1;
+              height: 150px;
+            }
+            &::before {
+              content: "";
+              width: 40px;
+              height: 40px;
+              background: map-get($font-color, primary-light);
+              position: absolute;
+              left: calc(360px / 2);
+              transform: rotate(45deg);
+              top: -15px;
+              z-index: -1;
+            }
+            p {
+              display: flex;
+              align-items: center;
+              font-family: map-get($font-family, sub_kr);
+              line-height: 1.5;
+              font-size: 18px;
+            }
+          }
         }
-      }
-      .skill-desc {
-        visibility: hidden;
-        opacity: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 400px;
-        height: 0;
-        padding: 20px;
-        background: map-get($font-color, primary-light);
-        margin-top: 28px;
-        position: relative;
-        transition: all 1s;
-        &.active {
-          visibility: visible;
-          opacity: 1;
-          height: 150px;
+        img {
+          width: 46px;
+          height: 46px;
         }
-        &::before {
-          content: "";
-          width: 40px;
-          height: 40px;
-          background: map-get($font-color, primary-light);
-          position: absolute;
-          left: calc(360px / 2);
-          transform: rotate(45deg);
-          top: -15px;
-          z-index: -1;
+        &:nth-child(3) {
+          .jquery {
+            background: #fff;
+            width: 36px;
+            height: 36px;
+          }
         }
-        p {
-          font-family: map-get($font-family, sub_kr);
-          line-height: 1.5;
-          font-size: 18px;
+        &:last-child {
+          img {
+            width: 38px;
+            height: 38px;
+          }
         }
       }
     }
@@ -367,104 +418,116 @@ header {
       justify-content: center;
       align-items: center;
       z-index: 100;
-    }
-    .modalScreen {
-      width: 80%;
-      height: 78%;
-      margin: auto;
-      background: map-get($font-color, primary-light);
-      border-radius: 20px;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      .modalScreenInner {
-        width: 94%;
-        border-width: 4px;
-        border-style: solid;
-        border-color: map-get($font-color, primary);
-        height: 90%;
+      .modalScreen {
+        width: 80%;
+        height: 78%;
+        margin: auto;
+        background: map-get($font-color, primary-light);
         border-radius: 20px;
-        display: flex;
-        justify-content: space-between;
+        display: none;
+        justify-content: center;
         align-items: center;
-        overflow: hidden;
-        position: relative;
-        .cloneWeb {
-          width: 58%;
-          height: 100%;
+        .modalScreenInner {
+          width: 94%;
+          border-width: 4px;
+          border-style: solid;
+          border-color: map-get($font-color, primary);
+          height: 90%;
+          border-radius: 20px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
           overflow: hidden;
-          img {
-            display: inline-block;
-            width: 100%;
+          position: relative;
+          .cloneWeb {
+            width: 58%;
             height: 100%;
-            object-fit: cover;
-            object-position: top;
-            transition: all 5s ease-in-out;
-            &:hover {
-              object-position: bottom;
-            }
-          }
-        }
-        .project-text {
-          width: 42%;
-          height: 100%;
-          background: #fff;
-          padding: 20px 0 0 20px;
-          ul {
-            width: 90%;
-            height: 88%;
-            display: flex;
-            flex-wrap: nowrap;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: center;
-          }
-          .clone-desc li {
-            display: flex;
-            align-items: flex-start;
-            gap: 8px;
-            .tit {
-              font-size: 22px;
-              i {
-                margin-right: 12px;
-                color: map-get($font-color, primary);
+            overflow: hidden;
+            img {
+              display: inline-block;
+              width: 100%;
+              height: 100%;
+              padding-right: 4px;
+              object-fit: cover;
+              object-position: top;
+              transition: all 5s ease-in-out;
+              &:hover {
+                object-position: bottom;
               }
             }
-            p {
-              margin-left: 20px;
+          }
+          .project-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 42%;
+            height: 100%;
+            background: #fff;
+            padding: 20px 0 0 20px;
+            ul {
+              width: 90%;
+              height: 100%;
+              display: flex;
+              gap: 52px;
+              flex-direction: column;
+              align-items: flex-start;
+              justify-content: center;
+              padding: 0 20px 50px;
+            }
+            .clone-desc li {
+              display: flex;
+              align-items: flex-start;
+              padding: 0;
+              gap: 8px;
+              .tit {
+                font-size: 22px;
+
+                i {
+                  margin-right: 12px;
+                  color: map-get($font-color, primary);
+                }
+                p {
+                  display: inline-block;
+                  font-size: 14px;
+                }
+              }
+              p {
+                margin-left: 30px;
+              }
             }
           }
-        }
-        .modalCloseBtn {
-          position: absolute;
-          display: inline-block;
-          right: 20px;
-          top: 10px;
-          text-align: center;
-          cursor: pointer;
-          i {
-            font-family: "FontAwesome";
-            content: "\f00d";
-            font-size: 48px;
-            color: map-get($font-color, primary);
+          .modalCloseBtn {
+            position: absolute;
+            display: inline-block;
+            right: 20px;
+            top: 10px;
+            text-align: center;
+            cursor: pointer;
+            i {
+              font-family: "FontAwesome";
+              content: "\f00d";
+              font-size: 48px;
+              color: map-get($font-color, primary);
+            }
           }
-        }
-        .viewMore {
-          display: inline-block;
-          position: absolute;
-          right: 20px;
-          bottom: 20px;
-          text-align: center;
-          line-height: 34px;
-          height: 42px;
-          width: 140px;
-          padding: 5px 10px;
-          background: map-get($font-color, primary);
-          border-radius: 24px;
-          color: #fff;
+          .viewMore {
+            display: inline-block;
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
+            text-align: center;
+            line-height: 34px;
+            height: 42px;
+            width: 140px;
+            padding: 5px 10px;
+            background: map-get($font-color, primary);
+            border-radius: 24px;
+            color: #fff;
+          }
         }
       }
     }
+
     ul {
       gap: 2%;
       .modalList {
@@ -607,24 +670,24 @@ header {
             align-items: center;
 
             #chat-iframe {
-              width: 80%;
-              height: 78%;
+              width: 100%;
+              height: 100%;
               border: none;
               border-radius: 5px;
               position: relative;
             }
             .modal-close-btn {
-              width: 58px;
+              width: 32px;
               height: 32px;
-              border-radius: 25px;
               text-align: center;
-              line-height: 32px;
               position: absolute;
-              right: 10%;
-              bottom: 7%;
-              background: map-get($font-color, primary);
-              color: #fff;
+              right: 10px;
+              top: 20px;
               cursor: pointer;
+              i {
+                color: map-get($font-color, primary);
+                font-size: 18px;
+              }
             }
           }
         }
@@ -662,12 +725,22 @@ header {
               transition: all 0.3s ease;
             }
             &:hover div {
+              display: flex;
+              justify-content: center;
+              align-items: center;
               top: 0;
-              opacity: 0.8;
+              opacity: 0.9;
+              text-align: left;
+              padding: 0 50px;
+              p {
+                width: 340px;
+                color: #fff;
+              }
             }
             img {
               width: 100%;
               object-fit: cover;
+              object-position: top;
               height: 100%;
               position: absolute;
               left: 0;
@@ -731,7 +804,7 @@ header {
           justify-content: center;
           align-items: center;
           img {
-            width: 88%;
+            width: 80%;
             padding: 5px;
           }
         }
