--- a/javascript/pureSite/public/style.css
+++ b/javascript/pureSite/public/style.css
@@ -80,12 +80,37 @@ header .header-wrap {
   justify-content: space-between;
   background: #fff;
   position: relative;
-  z-index: 100;
 }
 header .header-wrap .header-left {
   display: flex;
   align-items: center;
   gap: 3.4vw;
+}
+header .header-wrap .header-left .toggle-button {
+  display: none;
+  width: 2.8vw;
+  height: 2.4vw;
+  position: relative;
+  cursor: pointer;
+}
+header .header-wrap .header-left .toggle-button span {
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: #222;
+}
+header .header-wrap .header-left .toggle-button span:nth-child(2) {
+  top: 50%;
+  transform: translateY(-50%);
+  width: 90%;
+}
+header .header-wrap .header-left .toggle-button span:last-child {
+  top: 100%;
+  transform: translateY(-50%);
+}
+header .header-wrap .header-left .responsible-bg {
+  display: none;
 }
 header .header-wrap .header-left .title {
   width: 5.8vw;
@@ -94,15 +119,14 @@ header .header-wrap .header-left .title img {
   width: 100%;
   height: auto;
 }
-header .header-wrap .header-left ul {
+header .header-wrap .header-left .header-menu {
   display: flex;
   gap: 1.4vw;
 }
-header .header-wrap .header-left ul li {
-  font-size: 1vw;
+header .header-wrap .header-left .header-menu li {
   position: relative;
 }
-header .header-wrap .header-left ul li:last-child::before {
+header .header-wrap .header-left .header-menu li:nth-child(4)::before {
   content: "";
   position: absolute;
   right: -1.3vw;
@@ -112,10 +136,13 @@ header .header-wrap .header-left ul li:last-child::before {
   background: url("./img/ico_new_window.svg") center/contain no-repeat;
   cursor: pointer;
 }
-header .header-wrap .header-left ul .header-social {
+header .header-wrap .header-left .header-menu li a {
+  font-size: 1vw;
+}
+header .header-wrap .header-left .header-social {
   display: none;
 }
-header .header-wrap .header-left ul .popup-btn {
+header .header-wrap .header-left .popup-btn {
   display: none;
   background: url("./img/ico_popup_close.svg") center/contain no-repeat;
 }
@@ -153,9 +180,9 @@ header .header-wrap .option-menu ul {
   display: flex;
   gap: 0;
   flex-direction: column;
-  position: fixed;
-  top: 100%;
+  position: absolute;
   left: 0;
+  top: 100%;
   border: 2px solid black;
   margin-top: 14px;
   width: 100%;
@@ -269,18 +296,17 @@ section .main-sec .sec-bottom a {
 section .main-sec .sec-bottom a::before {
   content: "";
   position: absolute;
-  right: -50px;
+  right: -2.4vw;
   top: 0px;
-  background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain
-    no-repeat;
+  background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain no-repeat;
   width: 30%;
   height: 30%;
 }
 section .main-sec .sec-bottom a::after {
   content: "";
   position: absolute;
-  right: -56px;
-  top: 8px;
+  right: -2.8vw;
+  top: 0.2vw;
   background: url("./img/ico_event_go.png") center/contain no-repeat;
   width: 10%;
   height: 10%;
@@ -292,22 +318,24 @@ section .main-sec .sec-bottom a span {
 section .main-sec .sec-bottom a span::after {
   content: "";
   position: absolute;
-  left: 90px;
-  bottom: 46px;
+  left: 4.6vw;
+  bottom: 2.4vw;
   background: url("./img/ico_video_play.svg") center/contain no-repeat;
   width: 24%;
   height: 24%;
   z-index: 50;
 }
 section .main-sec .sec-bottom a img {
-  width: 100%;
-  max-width: 240px;
+  width: 12vw;
   margin-top: 16px;
   position: relative;
 }
 section .main-sec .sec-bottom .eat {
   font-family: "UBuntu";
   cursor: pointer;
+}
+section .main-sec .sec-bottom .eat img {
+  width: 2.8vw;
 }
 section .middle-sec {
   width: 100%;
@@ -537,53 +565,400 @@ footer .copyright span {
 }
 
 @media (max-width: 1024px) {
-  .brand.active {
+  header .brand.active {
     display: none;
   }
-  .header-wrap {
-    justify-content: center;
+  header .header-wrap {
+    position: relative;
+    height: 100px;
   }
-  .header-wrap .header-left ul {
-    display: none;
-    flex-direction: column;
+  header .header-wrap .header-left {
+    position: absolute;
+    left: 50px;
+    width: 50vw;
+    justify-content: space-between;
+  }
+  header .header-wrap .header-left .toggle-button {
+    display: flex;
+  }
+  header .header-wrap .header-left .toggle-button span {
     position: absolute;
     left: 0;
+    height: 2px;
+    width: 100%;
+    background: #222;
+  }
+  header .header-wrap .header-left .toggle-button span:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+    width: 90%;
+  }
+  header .header-wrap .header-left .toggle-button span:last-child {
+    top: 100%;
+    transform: translateY(-50%);
+  }
+  header .header-wrap .header-left .responsible-bg {
+    content: "";
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+    display: none;
+    transition: all 0.5s;
+  }
+  header .header-wrap .header-left .responsible-bg.active {
+    display: block;
+  }
+  header .header-wrap .header-left .title {
+    width: 8.8vw;
+  }
+  header .header-wrap .header-left .title img {
+    width: 100%;
+    height: auto;
+  }
+  header .header-wrap .header-left .header-menu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: -100%;
     top: 0;
     height: 100vh;
     width: 48vw;
     padding-left: 8vw;
     background: #fff;
-    z-index: 10;
+    z-index: 100;
     justify-content: center;
-    gap: 10vw;
+    gap: 1.8vw;
+    transition: all 0.5s;
   }
-  .header-wrap .header-left ul li:last-child::before {
+  header .header-wrap .header-left .header-menu li:nth-child(4)::before {
     display: none;
   }
-  .header-wrap .header-left ul li a {
+  header .header-wrap .header-left .header-menu li a {
     font-size: 4.8vw;
   }
-  .header-wrap .header-left ul li:last-child a {
-    font-size: 2.4vw;
+  header .header-wrap .header-left .header-menu li:nth-child(4) a {
+    font-size: 2.3vw;
     font-weight: 400;
     text-decoration: underline;
     position: relative;
   }
-  .header-wrap .header-left ul li:last-child a::after {
+  header .header-wrap .header-left .header-menu li:nth-child(4) a::after {
     content: "";
     position: absolute;
     background: url("img/ico_mobile_nav_arrow.svg") center/contain no-repeat;
-    right: -20%;
+    right: -28%;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
     width: 1vw;
     height: 1vw;
   }
-  .header-wrap .header-left ul .header-social {
+  header .header-wrap .header-left .header-menu .header-social {
+    display: flex;
+    gap: 1.6vw;
+    z-index: 10050;
+    margin-top: 36px;
+  }
+  header .header-wrap .header-left .header-menu .header-social a img {
+    width: 3.8vw;
+  }
+  header .header-wrap .header-left .header-menu .popup-btn {
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 2.6vw;
+    height: 2.6vw;
+    background: url("./img/ico_popup_close.svg") center/contain no-repeat;
+    cursor: pointer;
+  }
+  header .header-wrap .header-left .header-menu.active {
+    left: 0;
+  }
+  header .header-wrap .option-menu {
+    position: absolute;
+    right: 50px;
+    width: 50vw;
+    width: 14vw;
+    height: 4vw;
+    font-size: 1.6vw;
+  }
+  header .header-wrap .option-menu::after {
+    top: 1.6vw;
+    right: 2px;
+    width: 1vw;
+    height: 1vw;
+  }
+  section .main-sec .sec-bottom {
+    font-size: 1.6vw;
+  }
+  section .main-sec .sec-bottom a {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  section .main-sec .sec-bottom a::before {
+    right: -3.6vw;
+  }
+  section .main-sec .sec-bottom a::after {
+    right: -3.8vw;
+    top: 0.2vw;
+  }
+  section .main-sec .sec-bottom a span::after {
+    left: 8.6vw;
+    bottom: 4.4vw;
+  }
+  section .main-sec .sec-bottom a img {
+    width: 22vw;
+  }
+  section .main-sec .sec-bottom .eat img {
+    width: 3.2vw;
+  }
+  section .middle-sec ul li {
+    height: 22vw;
+  }
+  section .middle-sec ul li::before {
+    background: url("./img/chungjungone-logo1.png") center/cover no-repeat;
+    width: 10vw;
+    height: 2vw;
+    padding: 2vw;
+  }
+  section .middle-sec ul li a .middle-title {
+    top: 9.4vw;
+    font-size: 2.8vw;
+  }
+  footer {
+    font-size: 1.6vw;
+  }
+  footer .personal {
+    margin-bottom: 2.4vw;
+  }
+  footer .personal span:first-child {
+    width: 12vw;
+  }
+  footer .personal span:first-child::before {
+    right: -6px;
+    top: 4px;
+    width: 1.2vw;
+    height: 1.2vw;
+  }
+  footer .personal span:last-child::before {
+    right: -6vw;
+    top: -1vw;
+    width: 4vw;
+    height: 4vw;
+  }
+  footer .logo-bottom {
+    width: 8vw;
+    margin-bottom: 1.8vw;
+  }
+  footer .desc-bottom {
+    font-size: 1.4vw;
+  }
+  footer .social {
+    display: flex;
+    width: 16vw;
+  }
+  footer .copyright {
+    font-size: 1.4vw;
+  }
+}
+@media (max-width: 768px) {
+  header .header-wrap {
+    height: 16vw;
+  }
+  header .header-wrap .header-left {
+    position: absolute;
+    left: 50px;
+    width: 50vw;
+    justify-content: space-between;
+  }
+  header .header-wrap .header-left .toggle-button {
+    width: 5vw;
+    height: 4.6vw;
+  }
+  header .header-wrap .header-left .title {
+    width: 12.4vw;
+  }
+  header .header-wrap .header-left .header-menu {
+    width: 76vw;
+  }
+  header .header-wrap .header-left .header-menu li a {
+    font-size: 10vw;
+  }
+  header .header-wrap .header-left .header-menu li:nth-child(4) a {
+    font-size: 4vw;
+  }
+  header .header-wrap .header-left .header-menu li:nth-child(4) a::after {
+    width: 1.8vw;
+    height: 1.8vw;
+  }
+  header .header-wrap .header-left .header-menu .header-social {
+    gap: 3.4vw;
+  }
+  header .header-wrap .header-left .header-menu .header-social a img {
+    width: 7.4vw;
+  }
+  header .header-wrap .header-left .header-menu .popup-btn {
+    width: 4.8vw;
+    height: 4.8vw;
+  }
+  header .header-wrap .header-left .header-menu.active {
+    left: 0;
+  }
+  header .header-wrap .option-menu {
+    width: 24vw;
+    height: 8vw;
+    font-size: 3vw;
+  }
+  header .header-wrap .option-menu::before {
+    height: 0.4vw;
+  }
+  header .header-wrap .option-menu::after {
+    top: 3.8vw;
+    right: 2px;
+    width: 2vw;
+    height: 2vw;
+  }
+  section {
+    margin-bottom: 8vw;
+  }
+  section .main-sec .sec-wrap {
+    font-size: 14vw;
+    min-height: 88vw;
+  }
+  section .main-sec .sec-wrap .middle .changeImg {
+    width: 42vw;
+    max-width: 540px;
+  }
+  section .main-sec .sec-wrap .life {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+  }
+  section .main-sec .sec-bottom {
+    font-size: 2.6vw;
+  }
+  section .main-sec .sec-bottom a {
     display: flex;
   }
-  .header-wrap .header-left ul .popup-btn {
-    display: block;
+  section .main-sec .sec-bottom a::before, section .main-sec .sec-bottom a::after {
+    display: none;
   }
-} /*# sourceMappingURL=style.css.map */
+  section .main-sec .sec-bottom a span {
+    text-indent: -9999px;
+  }
+  section .main-sec .sec-bottom a span::after {
+    left: 16vw;
+    top: 14vw;
+  }
+  section .main-sec .sec-bottom a img {
+    width: 42vw;
+  }
+  section .main-sec .sec-bottom .eat img {
+    width: 6.8vw;
+  }
+  section .middle-sec ul li {
+    height: 34vw;
+  }
+  section .middle-sec ul li::before {
+    width: 18vw;
+    height: 4vw;
+    padding: 2vw;
+  }
+  section .middle-sec ul li a .middle-title {
+    font-size: 4vw;
+    width: 28vw;
+    top: 14vw;
+  }
+  section .middle-sec ul li a .middle-title::before {
+    left: 0;
+    bottom: -74%;
+    width: 4vw;
+    height: 4vw;
+  }
+  section .middle-sec ul li:nth-child(3) a .middle-title::before {
+    bottom: -38%;
+  }
+  footer {
+    font-size: 3.8vw;
+  }
+  footer .personal {
+    margin-bottom: 8vw;
+  }
+  footer .personal span:first-child {
+    width: 30vw;
+  }
+  footer .personal span:first-child::before {
+    width: 3.4vw;
+    height: 3.4vw;
+  }
+  footer .personal span:last-child::before {
+    display: none;
+  }
+  footer .logo-bottom {
+    width: 14vw;
+    margin-bottom: 3vw;
+  }
+  footer .desc-bottom {
+    font-size: 3.4vw;
+    margin-bottom: 3.4vw;
+  }
+  footer .desc-bottom .social {
+    display: flex;
+    width: 32vw;
+    margin: 4vw auto;
+    gap: 2.4vw;
+    position: relative;
+  }
+  footer .desc-bottom .social::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -14vw;
+    width: 12vw;
+    height: 12vw;
+    background: url("./img/ccm.png") center/contain no-repeat;
+  }
+  footer .desc-bottom .social a {
+    width: 20%;
+  }
+  footer .desc-bottom .social img {
+    width: 100%;
+  }
+  footer .desc-bottom .copyright {
+    margin-top: 12vw;
+    font-size: 3vw;
+  }
+}
+@media (max-width: 390px) {
+  header .header-wrap {
+    padding: 0;
+  }
+  header .header-wrap .header-left {
+    left: 24px;
+  }
+  header .header-wrap .option-menu {
+    right: 24px;
+    width: 26vw;
+    height: 8vw;
+    font-size: 3vw;
+  }
+  header .header-wrap .option-menu::before {
+    height: 0.4vw;
+  }
+  header .header-wrap .option-menu::after {
+    top: 3.8vw;
+    right: 2px;
+    width: 2vw;
+    height: 2vw;
+  }
+}/*# sourceMappingURL=style.css.map */
