--- a/javascript/pureSite/public/style.scss
+++ b/javascript/pureSite/public/style.scss
@@ -82,11 +82,37 @@ header {
     justify-content: space-between;
     background: #fff;
     position: relative;
-    z-index: 100;
+
     .header-left {
       display: flex;
       align-items: center;
       gap: 3.4vw;
+      .toggle-button {
+        display: none;
+        width: 2.8vw;
+        height: 2.4vw;
+        position: relative;
+        cursor: pointer;
+        span {
+          position: absolute;
+          left: 0;
+          height: 2px;
+          width: 100%;
+          background: #222;
+          &:nth-child(2) {
+            top: 50%;
+            transform: translateY(-50%);
+            width: 90%;
+          }
+          &:last-child {
+            top: 100%;
+            transform: translateY(-50%);
+          }
+        }
+      }
+      .responsible-bg {
+        display: none;
+      }
       .title {
         width: 5.8vw;
 
@@ -95,13 +121,12 @@ header {
           height: auto;
         }
       }
-      ul {
+      .header-menu {
         display: flex;
         gap: 1.4vw;
         li {
-          font-size: 1vw;
           position: relative;
-          &:last-child::before {
+          &:nth-child(4)::before {
             content: "";
             position: absolute;
             right: -1.3vw;
@@ -111,14 +136,17 @@ header {
             background: url("./img/ico_new_window.svg") center/contain no-repeat;
             cursor: pointer;
           }
+          a {
+            font-size: 1vw;
+          }
         }
-        .header-social {
-          display: none;
-        }
-        .popup-btn {
-          display: none;
-          background: url("./img/ico_popup_close.svg") center/contain no-repeat;
-        }
+      }
+      .header-social {
+        display: none;
+      }
+      .popup-btn {
+        display: none;
+        background: url("./img/ico_popup_close.svg") center/contain no-repeat;
       }
     }
 
@@ -155,9 +183,9 @@ header {
         display: flex;
         gap: 0;
         flex-direction: column;
-        position: fixed;
-        top: 100%;
+        position: absolute;
         left: 0;
+        top: 100%;
         border: 2px solid black;
         margin-top: 14px;
         width: 100%;
@@ -271,7 +299,7 @@ section {
         &::before {
           content: "";
           position: absolute;
-          right: -50px;
+          right: -2.4vw;
           top: 0px;
           background: url("./img/ico_FlotingCampaign_arrow.svg") center/contain
             no-repeat;
@@ -281,8 +309,8 @@ section {
         &::after {
           content: "";
           position: absolute;
-          right: -56px;
-          top: 8px;
+          right: -2.8vw;
+          top: 0.2vw;
           background: url("./img/ico_event_go.png") center/contain no-repeat;
           width: 10%;
           height: 10%;
@@ -294,8 +322,8 @@ section {
           &::after {
             content: "";
             position: absolute;
-            left: 90px;
-            bottom: 46px;
+            left: 4.6vw;
+            bottom: 2.4vw;
             background: url("./img/ico_video_play.svg") center/contain no-repeat;
             width: 24%;
             height: 24%;
@@ -303,8 +331,7 @@ section {
           }
         }
         img {
-          width: 100%;
-          max-width: 240px;
+          width: 12vw;
           margin-top: 16px;
           position: relative;
         }
@@ -312,6 +339,9 @@ section {
       .eat {
         font-family: "UBuntu";
         cursor: pointer;
+        img {
+          width: 2.8vw;
+        }
       }
     }
   }
@@ -561,56 +591,460 @@ footer {
   }
 }
 @media (max-width: 1024px) {
-  .brand.active {
-    display: none;
-  }
-  .header-wrap {
-    justify-content: center;
-    .header-left {
-      ul {
-        display: none;
-        flex-direction: column;
+  header {
+    .brand.active {
+      display: none;
+    }
+
+    .header-wrap {
+      position: relative;
+      height: 100px;
+
+      .header-left {
         position: absolute;
-        left: 0;
-        top: 0;
-        height: 100vh;
-        width: 48vw;
-        padding-left: 8vw;
-        background: #fff;
-        z-index: 10;
-        justify-content: center;
-        gap: 10vw;
-        li {
-          &:last-child::before {
-            display: none;
-          }
-          a {
-            font-size: 4.8vw;
-          }
-          &:last-child a {
-            font-size: 2.4vw;
-            font-weight: 400;
-            text-decoration: underline;
-            position: relative;
-            &::after {
-              content: "";
-              position: absolute;
-              background: url("img/ico_mobile_nav_arrow.svg") center/contain
-                no-repeat;
-              right: -20%;
+        left: 50px;
+        width: 50vw;
+        justify-content: space-between;
+
+        .toggle-button {
+          display: flex;
+
+          span {
+            position: absolute;
+            left: 0;
+            height: 2px;
+            width: 100%;
+            background: #222;
+            &:nth-child(2) {
               top: 50%;
               transform: translateY(-50%);
-              text-align: center;
-              width: 1vw;
-              height: 1vw;
+              width: 90%;
+            }
+            &:last-child {
+              top: 100%;
+              transform: translateY(-50%);
             }
           }
         }
-        .header-social {
-          display: flex;
+        .responsible-bg {
+          content: "";
+          position: fixed;
+          left: 0;
+          top: 0;
+          width: 100vw;
+          height: 100vh;
+          background: rgba(0, 0, 0, 0.3);
+          display: none;
+          transition: all 0.5s;
         }
-        .popup-btn {
+        .responsible-bg.active {
           display: block;
+        }
+        .title {
+          width: 8.8vw;
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+        .header-menu {
+          display: flex;
+          flex-direction: column;
+          position: fixed;
+          left: -100%;
+          top: 0;
+          height: 100vh;
+          width: 48vw;
+          padding-left: 8vw;
+          background: #fff;
+          z-index: 100;
+          justify-content: center;
+          gap: 1.8vw;
+          transition: all 0.5s;
+
+          li {
+            &:nth-child(4)::before {
+              display: none;
+            }
+            a {
+              font-size: 4.8vw;
+            }
+            &:nth-child(4) a {
+              font-size: 2.3vw;
+              font-weight: 400;
+              text-decoration: underline;
+              position: relative;
+              &::after {
+                content: "";
+                position: absolute;
+                background: url("img/ico_mobile_nav_arrow.svg") center/contain
+                  no-repeat;
+                right: -28%;
+                top: 50%;
+                transform: translateY(-50%);
+                text-align: center;
+                width: 1vw;
+                height: 1vw;
+              }
+            }
+          }
+          .header-social {
+            display: flex;
+            gap: 1.6vw;
+            z-index: 10050;
+            margin-top: 36px;
+            a {
+              img {
+                width: 3.8vw;
+              }
+            }
+          }
+          .popup-btn {
+            display: block;
+            position: absolute;
+            top: 40px;
+            right: 40px;
+            width: 2.6vw;
+            height: 2.6vw;
+            background: url("./img/ico_popup_close.svg") center/contain
+              no-repeat;
+            cursor: pointer;
+          }
+        }
+        .header-menu.active {
+          left: 0;
+        }
+      }
+      .option-menu {
+        position: absolute;
+        right: 50px;
+        width: 50vw;
+        width: 14vw;
+        height: 4vw;
+        font-size: 1.6vw;
+        &::after {
+          top: 1.6vw;
+          right: 2px;
+          width: 1vw;
+          height: 1vw;
+        }
+      }
+    }
+  }
+  section {
+    .main-sec {
+      .sec-bottom {
+        font-size: 1.6vw;
+        a {
+          width: auto;
+          display: flex;
+          flex-direction: column;
+          position: relative;
+          &::before {
+            right: -3.6vw;
+          }
+          &::after {
+            right: -3.8vw;
+            top: 0.2vw;
+          }
+          span {
+            &::after {
+              left: 8.6vw;
+              bottom: 4.4vw;
+            }
+          }
+          img {
+            width: 22vw;
+          }
+        }
+        .eat {
+          img {
+            width: 3.2vw;
+          }
+        }
+      }
+    }
+    .middle-sec {
+      ul {
+        li {
+          height: 22vw;
+          &::before {
+            background: url("./img/chungjungone-logo1.png") center/cover
+              no-repeat;
+            width: 10vw;
+            height: 2vw;
+            padding: 2vw;
+          }
+          a {
+            .middle-title {
+              top: 9.4vw;
+              font-size: 2.8vw;
+            }
+          }
+        }
+      }
+    }
+  }
+  footer {
+    font-size: 1.6vw;
+    .personal {
+      margin-bottom: 2.4vw;
+      span:first-child {
+        width: 12vw;
+        &::before {
+          right: -6px;
+          top: 4px;
+          width: 1.2vw;
+          height: 1.2vw;
+        }
+      }
+      span:last-child {
+        &::before {
+          right: -6vw;
+          top: -1vw;
+          width: 4vw;
+          height: 4vw;
+        }
+      }
+    }
+    .logo-bottom {
+      width: 8vw;
+      margin-bottom: 1.8vw;
+    }
+    .desc-bottom {
+      font-size: 1.4vw;
+    }
+    .social {
+      display: flex;
+      width: 16vw;
+    }
+    .copyright {
+      font-size: 1.4vw;
+    }
+  }
+}
+@media (max-width: 768px) {
+  header {
+    .header-wrap {
+      height: 16vw;
+      .header-left {
+        position: absolute;
+        left: 50px;
+        width: 50vw;
+        justify-content: space-between;
+
+        .toggle-button {
+          width: 5vw;
+          height: 4.6vw;
+        }
+        .title {
+          width: 12.4vw;
+        }
+        .header-menu {
+          width: 76vw;
+          li {
+            a {
+              font-size: 10vw;
+            }
+            &:nth-child(4) a {
+              font-size: 4vw;
+
+              &::after {
+                width: 1.8vw;
+                height: 1.8vw;
+              }
+            }
+          }
+          .header-social {
+            gap: 3.4vw;
+
+            a {
+              img {
+                width: 7.4vw;
+              }
+            }
+          }
+          .popup-btn {
+            width: 4.8vw;
+            height: 4.8vw;
+          }
+        }
+        .header-menu.active {
+          left: 0;
+        }
+      }
+      .option-menu {
+        width: 24vw;
+        height: 8vw;
+        font-size: 3vw;
+        &::before {
+          height: 0.4vw;
+        }
+        &::after {
+          top: 3.8vw;
+          right: 2px;
+          width: 2vw;
+          height: 2vw;
+        }
+      }
+    }
+  }
+  section {
+    margin-bottom: 8vw;
+    .main-sec {
+      .sec-wrap {
+        font-size: 14vw;
+        min-height: 88vw;
+        .middle {
+          .changeImg {
+            width: 42vw;
+            max-width: 540px;
+          }
+        }
+        .life {
+          width: 100%;
+          text-align: center;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          text-align: center;
+        }
+      }
+      .sec-bottom {
+        font-size: 2.6vw;
+        a {
+          display: flex;
+          &::before,
+          &::after {
+            display: none;
+          }
+          span {
+            text-indent: -9999px;
+            &::after {
+              left: 16vw;
+              top: 14vw;
+            }
+          }
+          img {
+            width: 42vw;
+          }
+        }
+        .eat {
+          img {
+            width: 6.8vw;
+          }
+        }
+      }
+    }
+    .middle-sec {
+      ul {
+        li {
+          height: 34vw;
+          &::before {
+            width: 18vw;
+            height: 4vw;
+            padding: 2vw;
+          }
+          a {
+            .middle-title {
+              font-size: 4vw;
+              width: 28vw;
+              top: 14vw;
+              &::before {
+                left: 0;
+                bottom: -74%;
+                width: 4vw;
+                height: 4vw;
+              }
+            }
+          }
+          &:nth-child(3) {
+            a {
+              .middle-title {
+                &::before {
+                  bottom: -38%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  footer {
+    font-size: 3.8vw;
+    .personal {
+      margin-bottom: 8vw;
+      span:first-child {
+        width: 30vw;
+        &::before {
+          width: 3.4vw;
+          height: 3.4vw;
+        }
+      }
+      span:last-child {
+        &::before {
+          display: none;
+        }
+      }
+    }
+    .logo-bottom {
+      width: 14vw;
+      margin-bottom: 3vw;
+    }
+    .desc-bottom {
+      font-size: 3.4vw;
+      margin-bottom: 3.4vw;
+      .social {
+        display: flex;
+        width: 32vw;
+        margin: 4vw auto;
+        gap: 2.4vw;
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -14vw;
+          width: 12vw;
+          height: 12vw;
+          background: url("./img/ccm.png") center/contain no-repeat;
+        }
+        a {
+          width: 20%;
+        }
+        img {
+          width: 100%;
+        }
+      }
+      .copyright {
+        margin-top: 12vw;
+        font-size: 3vw;
+      }
+    }
+  }
+}
+@media (max-width: 390px) {
+  header {
+    .header-wrap {
+      padding: 0;
+      .header-left {
+        left: 24px;
+      }
+      .option-menu {
+        right: 24px;
+        width: 26vw;
+        height: 8vw;
+        font-size: 3vw;
+        &::before {
+          height: 0.4vw;
+        }
+        &::after {
+          top: 3.8vw;
+          right: 2px;
+          width: 2vw;
+          height: 2vw;
         }
       }
     }
