--- a/javascript/ggLibrary/public/style.scss
+++ b/javascript/ggLibrary/public/style.scss
@@ -69,6 +69,9 @@ header {
       }
     }
   }
+  .fa-x {
+    display: none;
+  }
 }
 nav {
   display: flex;
@@ -95,11 +98,14 @@ nav {
       align-items: center;
       justify-content: flex-end;
       width: 70%;
-      a {
+      .main-nav {
         font: 600 20px/1 "Noto Sans KR";
         color: #444;
         padding: 28px 34px;
         transition: all 0.2s;
+        img {
+          display: none;
+        }
         &:hover {
           color: #437dea;
         }
@@ -167,7 +173,7 @@ nav {
           .sec.active {
             background: #f0f0f0;
           }
-          .sec:hover:before {
+          .sec:hover::before {
             width: 52%;
           }
           .sec.active::before {
@@ -830,9 +836,11 @@ nav {
 
 @media (max-width: 1024px) {
   .sign-log-in {
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
+    width: 100vw;
     height: 70px;
     z-index: 50;
     background: #3942af;
@@ -859,9 +867,17 @@ nav {
           background: none;
 
           img {
+            display: none;
+          }
+          &::after {
+            content: "";
             position: absolute;
-            left: 8px;
             top: 6px;
+            left: 0;
+            background: url("./image/ico_link_header_top_w.png") top/contain
+              no-repeat;
+            width: 100%;
+            height: 187px;
           }
         }
         p {
@@ -871,126 +887,138 @@ nav {
           padding-bottom: 4px;
         }
       }
+      .signin {
+        span {
+          &::after {
+            top: -108px;
+          }
+        }
+      }
+    }
+    &.active {
+      display: flex;
+    }
+    .fa-x {
+      display: flex;
+      width: 50px;
+      height: 50px;
+      margin-top: 20px;
+      font-size: 28px;
+      color: #fff;
+      cursor: pointer;
     }
   }
   nav {
     height: 68px;
     .nav-inner {
       width: 1440px;
-      padding: 0;
+      padding: 0 16px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+
       .title {
         img {
           width: 30%;
         }
       }
       .nav-menu {
-        position: relative;
+        display: none;
+        position: fixed;
         left: 0;
-        top: 0;
+        top: 70px;
         background: #fff;
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
-        width: 100vw;
+        align-items: flex-start;
+        justify-content: flex-start;
+        width: 40vw;
         height: 100vh;
-
-        a {
-          font: 600 20px/1 "Noto Sans KR";
+        .main-nav {
           color: #444;
-          padding: 28px 34px;
-          transition: all 0.2s;
+          padding: 22px 34px;
+          width: 40vw;
+          text-align: left;
+          padding-left: 20px;
+          border-bottom: 1px solid #ddd;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          position: relative;
+          img {
+            display: none;
+            margin-right: 8px;
+            width: 10px;
+            height: 14px;
+            &.active {
+              display: block;
+            }
+          }
+
           &:hover {
             color: #437dea;
           }
           &.active {
             color: #437dea;
+            background: rgba(67, 125, 234, 0.2);
+            img {
+              display: block;
+            }
           }
         }
         .hidden-menu {
-          width: 100%;
+          width: 100vw;
+          height: 100vh;
           display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
           opacity: 1;
-          justify-content: center;
-          position: absolute;
-          left: 0;
-          bottom: -301px;
-          font-size: 14px;
-          background: #fff;
-          box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
-          transition: all 0.2s;
-          &.active {
-            display: flex;
-            opacity: 1;
-          }
+          position: fixed;
+          left: 40vw;
+          top: 70px;
+          box-shadow: none;
           .hidden-menu-inner {
-            width: 1400px;
+            width: 100%;
             height: 100%;
             display: flex;
-            justify-content: flex-end;
-            background: #fff;
-            padding-right: 4.2%;
+            flex-direction: column;
+
+            justify-content: flex-start;
+            background: #eee;
+            position: relative;
             .sec {
-              display: flex;
+              display: none;
               flex-direction: column;
-              gap: 16px;
-              width: 140px;
-              padding-top: 12px;
-              text-align: center;
+              gap: 0;
               border-right: 1px solid #f0f0f0;
-              background: transparent;
-              transition: all 0.2s;
-              position: relative;
+              position: absolute;
+              padding-top: 0;
               &::before {
-                content: "";
-                width: 0;
-                position: absolute;
-                left: 32px;
-                top: -2px;
-                height: 2px;
-                background: #437dea;
-                transition: all 0.2s;
+                display: none;
               }
               a {
-                display: inline-block;
-                font-size: 14px;
-                padding: 4px 0;
+                text-align: left;
+                width: 100vw;
+                border-bottom: 1px solid #ddd;
+                height: 65px;
+                font-size: 16px;
+                line-height: 65px;
+                font-weight: 500;
+                padding: 0 0 0 16px;
+
                 &:hover {
-                  text-decoration: underline;
+                  text-decoration: none;
+                  background: none;
                 }
               }
-            }
-            .sec:hover {
-              background: #f0f0f0;
-            }
-            .sec.active {
-              background: #f0f0f0;
-            }
-            .sec:hover:before {
-              width: 52%;
-            }
-            .sec.active::before {
-              width: 52%;
-            }
-            .section01 {
-              border-left: 1px solid #f0f0f0;
-            }
-            .section03 {
-              width: 160px;
-              &::before {
-                left: 38px;
-              }
-            }
-            .section04 {
-              width: 170px;
-              &::before {
-                left: 40px;
+              &.active {
+                display: flex;
               }
             }
           }
+        }
+        &.active {
+          display: flex;
         }
       }
       .menu-btn {
@@ -999,6 +1027,7 @@ nav {
         width: 25px;
         height: 21px;
         cursor: pointer;
+        z-index: 80000;
 
         span {
           position: absolute;
@@ -1007,6 +1036,7 @@ nav {
           width: 100%;
           height: 3px;
           background: #555;
+          z-index: 100;
 
           &:nth-child(2) {
             top: 50%;
